--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,22 @@
     box-sizing: border-box;
 }
 body {
-    background: #fff;
-    color:black;
+    
+    color:white;
     font-family: 'time new roman';
 }
+.contenedor{
+    margin-top: 350px;
+    margin-left: 45%;
+   
+}
 .portada {
-    width: 100%;
-    background: #ccc;
-    min-height: 100vh;
+    width: 128px;
+    margin-top: 350px;
+    background:#59227e;
+    height: 128px;
     top: 0;
-    left: 0;
-    right: 0;
+    left: 45%;
     position: fixed;
     display: flex;
     flex-direction: column;
@@ -24,7 +29,7 @@ body {
     transition: .5s ease-out all;
 }
 .portada.oculta{
-    transform: translateY(100%);
+    transform: translateY(288%);
 }
 .portada.header {
     margin-bottom: 100px;
@@ -44,8 +49,8 @@ main{
     max-width: 1000px;
     margin: auto;
     width: 90%;
-    padding: 60 px 0;
-    font-size: 18px;
+    padding: 20px 0;
+    font-size: 2px;
     line-height: 28px;
     text-align: left;
 }
@@ -56,10 +61,10 @@ main{
     margin-bottom: 100px;
 }
 .simply-section {
-    background: #fff;
-    width: 180px;
-    height: 100px;
-    margin: 0 20px;
+    background: #0ea150;
+    width: 32px;
+    height: 32px;
+    margin: 0 3px;
     border-radius: 5px;
     display: flex;
     align-items: center;
@@ -67,10 +72,13 @@ main{
 }
 .simply-amount{
     display: block;
-    font-size: 50px;
+    font-size: 6px;
     font-weight: 700;
 }
 .simply-word{
-    font-weight: 300;
-    font-size: 100px;
+    font-weight: 30px;
+    font-size: 10px;
 }
+.simply-days-section{
+    visibility: hidden;
+    }
