--- a/css/styles.css
+++ b/css/styles.css
@@ -80,10 +80,10 @@ main{
     font-weight: 30px;
     font-size: 10px;
 }
-.simply-days-section{
+/* .simply-days-section{
     visibility: hidden;
     
-    }
+    } */
     .simply-hours-section{
         margin-right: 50px;
 
