--- a/css/styles.css
+++ b/css/styles.css
@@ -14,11 +14,11 @@ body {
     background:#59227e;
     background-image: url("../img/Cuatro.jpg"); 
     display: block;
-    align-items: left;
-    justify-content: left;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-
-}
+    position:absolute;
+}   
 #tempo{
     display: block;
     font-size: 25px;
@@ -26,7 +26,10 @@ body {
     background-color: #59227e;
     height: 128px;
     transition: .5s ease-out all;
+    position: relative;
+    padding-top: 20px;
 }
 .time {
     font-size: 33px;
+    
 }
