--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body {
     width: 128px;
     height: 128px;
     background:#5f2872;
-    background-image: url("../img/Cuatro.jpg"); 
+    background-image: url("../img/Quatro.png"); 
     display: block;
     align-items: center;
     justify-content: center;
